fix(ui): fix @state=unprocessed in dark mode

--- a/ui/src/Styles/Components/BaseLabel.scss
+++ b/ui/src/Styles/Components/BaseLabel.scss
@@ -37,7 +37,8 @@
   }
   &.bg-secondary,
   &.btn-secondary {
-    border: 1px solid darken($secondary, 2%);
+    border: 1px solid lighten($secondary, 2%);
+    background-color: lighten($secondary, 4%) !important;
   }
   &.bg-success,
   &.btn-success {
